# presentation-py

./: .env.sample  .gitignore  README.md  data.py  main.js  main.py  pyproject.toml  report.py  story.py
data/: data.js  data.py
html/: sprint.html
promt/: promt.py  weekly_report_promt.py
src/: create_pptx.py  get_jira_data.py  gigachat_client.py  lmstudio_client.py  ollama_client.py  openroute_client.py  read_pdf.py
template/: base.pptx  template.pptx  ~$template.pptx
